--- a/_posts/2020-07-29-episode.md
+++ b/_posts/2020-07-29-episode.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "July 29, 2020"
+title: "The Silent Podcast — July 29, 2020"
 date: 2020-07-29 06:00:00 -0500
 file: "https://thesilentpodcast.s3.amazonaws.com/silent-track.mp3"
-summary: "The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you."
+summary: "10 minutes of stillness for July 29, 2020"
 duration: "10:00"
 explicit: "no"
 keywords: "mindfulness, silence"
