--- a/_posts/2024-06-14-episode.md
+++ b/_posts/2024-06-14-episode.md
@@ -2,5 +2,6 @@
 title: "The Silent Podcast — June 14, 2024"
 date: 2024-06-14 06:00:00 -0500
 file: "https://thesilentpodcast.s3.amazonaws.com/the-silent-podcast-episode-track.mp3"
+duration: "10:00"
 summary: "10 minutes of stillness for June 14, 2024."
 ---
